chromeos: Fix crash in ui::CalculateIdleTime under --mash

This is a temporary fix for crashes on enterprise enrolled devices
running under --mash. Longer term we need a way to access user activity
information from the browser process.

Bug: 716244
Test: manual, run chrome --mash on enterprise enrolled device, doesn't
Change-Id: I3d6d5aeabde2880e053738847ca08c3813efab86
crash